# creativity

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml
.claude/: settings.local.json
configs/: prototype.yaml
docs/: coauthor-research-execution.md  mop-divpo-coauthor-synthesis.md  research-report.md
docs/superpowers/plans/: 2026-05-06-mop-divpo-prototype.md
docs/superpowers/specs/: 2026-05-06-mop-divpo-design.md
notebooks/: train_coauthor_colab.ipynb  train_colab.ipynb
scripts/: generate_divpo_candidates.py  run_evaluation.py
src/mop_divpo/: cli.py  config.py  io.py  personas.py  schema.py
src/mop_divpo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mop_divpo/coauthor/: __init__.py  data.py  ideation.py  schema.py
src/mop_divpo/data/: acquire.py  normalizers.py  prepare.py  sources.py
src/mop_divpo/divpo/: pairs.py  scoring.py
src/mop_divpo/eval/: evaluate.py
src/mop_divpo/inference/: generate.py  output_parser.py  session.py
src/mop_divpo/metrics/: diversity.py  semantic.py
src/mop_divpo/retrieval/: corpus.py
src/mop_divpo/routing/: gate.py
tests/: test_cli.py  test_coauthor_data.py  test_coauthor_schema.py  test_coauthor_workflow.py  test_data_prepare.py  test_dataset_acquire.py  test_dataset_sources.py  test_divpo_pairs.py  test_evaluate.py  test_metrics.py  test_output_parser.py  test_package_entrypoint.py  test_personas.py  test_retrieval.py  test_routing_gate.py  test_schema_io_config.py  test_session.py  test_training_inference.py
(+4 files in other folders)
