[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mop-divpo"
version = "0.1.0"
description = "Mixture of Persona + Diverse Preference Optimization prototype"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.19",
  "nltk>=3.8",
  "numpy>=1.26",
  "peft>=0.11",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "transformers>=4.44",
  "trl>=0.9",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
mop-divpo = "mop_divpo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
